deploy/kubernetes/overlays/k3s/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitcoin-bastion-api
spec:
  template:
    spec:
      containers:
        - name: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitcoin-bastion-worker
spec:
  template:
    spec:
      containers:
        - name: worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitcoin-bastion-beat
spec:
  template:
    spec:
      containers:
        - name: beat
