deploy/kubernetes/overlays/k3s/patch-single-node-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitcoin-bastion-api
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitcoin-bastion-worker
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitcoin-bastion-beat
spec:
  replicas: 1
